python/npu_nvme/storage/bindings.py


        # -- Query --
        lib.npu_nvme_get_max_transfer.argtypes = [ctypes.POINTER(NPUNVMEContext)]
        lib.npu_nvme_get_max_transfer.restype = ctypes.c_int

        lib.npu_nvme_get_total_blocks.argtypes = [ctypes.POINTER(NPUNVMEContext)]
        lib.npu_nvme_get_total_blocks.restype = ctypes.c_uint64
        if hasattr(lib, "npu_nvme_get_stats"):
            lib.npu_nvme_get_stats.argtypes = [ctypes.POINTER(NPUNVMEContext),
                                               ctypes.POINTER(NPUNVMEStats)]
            lib.npu_nvme_get_stats.restype = ctypes.c_int

        # -- Synchronous metadata I/O --
        lib.npu_nvme_sync_meta_io.argtypes = [
            ctypes.POINTER(NPUNVMEContext), ctypes.c_uint64,
            ctypes.c_uint32, ctypes.c_int, ctypes.c_void_p,
        ]
        lib.npu_nvme_sync_meta_io.restype = ctypes.c_int
        if hasattr(lib, "npu_nvme_flush"):
            lib.npu_nvme_flush.argtypes = [ctypes.POINTER(NPUNVMEContext)]
            lib.npu_nvme_flush.restype = ctypes.c_int

        # -- Delta frame ring-buffer layout (bookkeeping only, no I/O) --
        if hasattr(lib, "npu_nvme_delta_init"):
            lib.npu_nvme_delta_init.argtypes = [
                ctypes.c_void_p, ctypes.c_uint64, ctypes.c_uint64,
                ctypes.c_uint32]
            lib.npu_nvme_delta_init.restype = ctypes.c_int
        if hasattr(lib, "npu_nvme_delta_get_area_offset"):
            lib.npu_nvme_delta_get_area_offset.argtypes = [ctypes.c_void_p]
            lib.npu_nvme_delta_get_area_offset.restype = ctypes.c_uint64
        if hasattr(lib, "npu_nvme_delta_get_slot_size"):
            lib.npu_nvme_delta_get_slot_size.argtypes = [ctypes.c_void_p]
            lib.npu_nvme_delta_get_slot_size.restype = ctypes.c_uint64
        if hasattr(lib, "npu_nvme_delta_get_slot_count"):
            lib.npu_nvme_delta_get_slot_count.argtypes = [ctypes.c_void_p]
            lib.npu_nvme_delta_get_slot_count.restype = ctypes.c_uint32
        if hasattr(lib, "npu_nvme_set_io_timeout_ms"):
            lib.npu_nvme_set_io_timeout_ms.argtypes = [
                ctypes.c_void_p, ctypes.c_uint32]
            lib.npu_nvme_set_io_timeout_ms.restype = ctypes.c_int
        if hasattr(lib, "npu_nvme_get_io_timeout_ms"):
            lib.npu_nvme_get_io_timeout_ms.argtypes = [ctypes.c_void_p]
            lib.npu_nvme_get_io_timeout_ms.restype = ctypes.c_uint32
        if hasattr(lib, "npu_nvme_wait_quiescent"):
            lib.npu_nvme_wait_quiescent.argtypes = [ctypes.c_void_p, ctypes.c_uint32]
            lib.npu_nvme_wait_quiescent.restype = ctypes.c_int

        lib.npu_nvme_get_last_io_us.argtypes = [ctypes.c_void_p, ctypes.c_int]
        lib.npu_nvme_get_last_io_us.restype = ctypes.c_uint64

    except (OSError, AttributeError) as e:
        raise BackendUnavailable(f"NVMe backend unavailable: {_LIB_PATH}: {e}") from e
    for symbol in ('npu_nvme_flush','npu_nvme_close','npu_nvme_wait_quiescent',
                   'npu_nvme_submit_transfer','npu_nvme_submit_copy','npu_nvme_get_capabilities','npu_nvme_poll_request','npu_nvme_wait_request','npu_nvme_release_request'):
        if not hasattr(lib,symbol): raise BackendUnavailable('required FULL symbol missing: '+symbol)
    if not hasattr(acl_lib,'aclrtSetDevice'): raise BackendUnavailable('required ACL symbol missing: aclrtSetDevice')
    if not hasattr(lib,'npu_nvme_abi_version'): raise BackendUnavailable('ABI2 version symbol missing')
    lib.npu_nvme_abi_version.argtypes=[];lib.npu_nvme_abi_version.restype=ctypes.c_uint32
    if lib.npu_nvme_abi_version()!=2: raise BackendUnavailable('ABI major mismatch: expected2')
    return SimpleNamespace(lib=lib, acl_lib=acl_lib, library_path=_LIB_PATH)
